--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <!-- Inter font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
+    <!-- fontawesome CDN -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
@@ -95,9 +97,126 @@
       </div>
     </div>
     <h1 class="our-services">Our Services</h1>
+    <p class="our-services-content">Changing the Freelance Market, One Category at a Time</p>
+    <div class="row d-flex justify-content-center" style="margin-top: 4rem; margin-bottom: 4rem;">
+      <div class="col-lg-6 col-md-6 d-flex justify-content-center">
+        <div class="our-services-card" style="margin: .5rem;">
+          <img src="images/quarter-circle-blue.png" alt="" style="float: right;">
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 d-flex justify-content-center">
+        <div class="our-services-card" style="margin: .5rem;">
+          <img src="images/quarter-circle-green.png" alt="" style="float: right;">
+        </div>
+      </div>
+    </div>
   </div>
 </section>
-    
+
+<section id="#">
+  <div style="text-align: center; background-color: #1E1515; padding-top: 4rem; padding-bottom: 6rem;">
+      <h1 class="expect">What to expect when working with us?</h1>
+      <p class="expect-message">We are customer-obsessed and strive to deliver cost and time efficient freelance experience</p>
+    <div class="row no-gutters d-flex justify-content-center" style="margin-top: 4rem;">
+      <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+        <div class="expect-card">
+          <div class="expect-card-logo d-flex justify-content-center">
+            <img src="images/managed-service.svg" alt="">
+          </div>
+          <h1 class="expect-card-title">Managed Services</h1>
+          <p class="expect-card-content">We manage all your projects end to end. So, you don’t have to worry about the completion of your project</p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+        <div class="expect-card">
+          <div class="expect-card-logo d-flex justify-content-center">
+            <img src="images/best-quality-work.svg" alt="">
+          </div>
+          <h1 class="expect-card-title">Best Quality Work</h1>
+          <p class="expect-card-content">Our verified network of student freelancer and our quality check provides best quality work everytime</p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+        <div class="expect-card">
+          <div class="expect-card-logo d-flex justify-content-center">
+            <img src="images/cost-efficient.svg" alt="">
+          </div>
+          <h1 class="expect-card-title">Cost Efficient</h1>
+          <p class="expect-card-content">We ensure to deliever cost effiecient work to our clients leveraging the network of freelancers</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="#">
+  <div class="happy-clients-container">
+    <h1 class="happy-clients">Happy Clients</h1>
+    <p class="happy-clients-content">Our commitment to deliver best service at best prices make customers love us</p>
+    <div class="row no-gutters d-flex justify-content-center" style="margin-top: 70px;">
+      <div class="col-lg-6 d-flex justify-content-center"> 
+        <div class="happy-clients-card">
+
+        </div>
+      </div>
+      <div class="col-lg-6 d-flex justify-content-center">
+        <div class="happy-clients-card">
+
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="testim" class="testim">
+              <div class="wrap">
+  
+                  <span id="right-arrow" class="arrow right fa fa-chevron-right"></span>
+                  <span id="left-arrow" class="arrow left fa fa-chevron-left "></span>
+                  <ul id="testim-dots" class="dots">
+                      <li class="dot active"></li>
+                      <li class="dot"></li>
+                      <li class="dot"></li>
+                      <li class="dot"></li>
+                      <li class="dot"></li>
+                  </ul>
+                  <div id="testim-content" class="cont">
+                      
+                      <div class="active">
+                          <div class="img"><img src="https://image.ibb.co/hgy1M7/5a6f718346a28820008b4611_750_562.jpg" alt=""></div>
+                          <h2>Lorem P. Ipsum</h2>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>                    
+                      </div>
+  
+                      <div>
+                          <div class="img"><img src="https://image.ibb.co/cNP817/pexels_photo_220453.jpg" alt=""></div>
+                          <h2>Mr. Lorem Ipsum</h2>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>                    
+                      </div>
+  
+                      <div>
+                          <div class="img"><img src="https://image.ibb.co/iN3qES/pexels_photo_324658.jpg" alt=""></div>
+                          <h2>Lorem Ipsum</h2>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>                    
+                      </div>
+  
+                      <div>
+                          <div class="img"><img src="https://image.ibb.co/kL6AES/Top_SA_Nicky_Oppenheimer.jpg" alt=""></div>
+                          <h2>Lorem De Ipsum</h2>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>                    
+                      </div>
+  
+                      <div>
+                          <div class="img"><img src="https://image.ibb.co/gUPag7/image.jpg" alt=""></div>
+                          <h2>Ms. Lorem R. Ipsum</h2>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>                    
+                      </div>
+  
+                  </div>
+  
+              </div>
+      </section>
+    <script src="javascript.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
