--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Ryze</title>
     <!-- Stylesheet -->
     <link rel="stylesheet" href="styles.css">
+    <!-- favicon link -->
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <!-- poppins font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <!-- Inter font -->
@@ -50,7 +52,7 @@
       <div class="container" style="margin-top: 10%;">
         <div class="row">
             <div class="col-lg-7 col-md-12 col-sm-12">
-                <h1 class="home-heading" style="line-height: 1.5;">Hire Skilled Student<br>Front-End Developer /App...</h1> 
+                <h1 class="home-heading" style="line-height: 1.5;" title="Front-End Developer /App Developer/ Back-End Developer">Hire Skilled Student<br>Front-End Developer /App...</h1> 
                 <p class="home-content">Managed Platform for High-Quality Development Projects for Startups.</p>
                 <button class="btn-startup">For Startups</button>
                 <button class="btn-student">For Students</button>
@@ -66,19 +68,19 @@
   <div class="container">
     <h1 class="freelance-heading">Experience a Simplified Way to Freelance</h1>
     <p class="freelance-content">Tech Development Platform for Startups. Save on Time, Cost and Headache</p>
-    <div class="row freelance-row-1">
+    <div class="row freelance-row">
       <div class="col-lg-5 col-md-5" style="padding-top:8%;">
         <div class="freelance-card d-flex justify-content-center">
           <p class="freelance-card-content">We understand your project needs and till when you need the project</p>
         </div>
       </div>
       <div class="col-lg-7 col-md-7 d-flex justify-content-center">
-        <img src="images/freelance-1.svg" alt="">
+        <img class="freelance-card-image-1" src="images/freelance-1.svg" alt="">
       </div>
     </div>
-    <div class="row freelance-row-2">
+    <div class="row freelance-row">
       <div class="col-lg-7 col-md-7 d-flex justify-content-center">
-        <img src="images/freelance-2.svg" alt="">
+        <img class="freelance-card-image-2" src="images/freelance-2.svg" alt="">
       </div>
       <div class="col-lg-5 col-md-5" style="padding-top:8%;">
         <div class="freelance-card d-flex justify-content-center">
@@ -86,14 +88,14 @@
         </div>
       </div>
     </div>
-    <div class="row freelance-row-3">
+    <div class="row freelance-row">
       <div class="col-lg-5 col-md-5" style="padding-top:10%;">
         <div class="freelance-card d-flex justify-content-center">
           <p class="freelance-card-content">Execution is monitored by us while ensuring delivery and quality </p>
         </div>
       </div>
       <div class="col-lg-7 col-md-7 d-flex justify-content-center">
-        <img src="images/freelance-3.svg" alt="">
+        <img class="freelance-card-image-3" src="images/freelance-3.svg" alt="">
       </div>
     </div>
     <h1 class="our-services">Our Services</h1>
@@ -121,7 +123,7 @@
       <div class="col-lg-4 col-md-6 d-flex justify-content-center">
         <div class="expect-card">
           <div class="expect-card-logo d-flex justify-content-center">
-            <img src="images/managed-service.svg" alt="">
+            <img class="expect-card-image" src="images/managed-service.svg" alt="">
           </div>
           <h1 class="expect-card-title">Managed Services</h1>
           <p class="expect-card-content">We manage all your projects end to end. So, you don’t have to worry about the completion of your project</p>
@@ -130,7 +132,7 @@
       <div class="col-lg-4 col-md-6 d-flex justify-content-center">
         <div class="expect-card">
           <div class="expect-card-logo d-flex justify-content-center">
-            <img src="images/best-quality-work.svg" alt="">
+            <img class="expect-card-image" src="images/best-quality-work.svg" alt="">
           </div>
           <h1 class="expect-card-title">Best Quality Work</h1>
           <p class="expect-card-content">Our verified network of student freelancer and our quality check provides best quality work everytime</p>
@@ -139,7 +141,7 @@
       <div class="col-lg-4 col-md-6 d-flex justify-content-center">
         <div class="expect-card">
           <div class="expect-card-logo d-flex justify-content-center">
-            <img src="images/cost-efficient.svg" alt="">
+            <img class="expect-card-image" src="images/cost-efficient.svg" alt="">
           </div>
           <h1 class="expect-card-title">Cost Efficient</h1>
           <p class="expect-card-content">We ensure to deliever cost effiecient work to our clients leveraging the network of freelancers</p>
@@ -223,7 +225,7 @@
               </form>
             </div>
             <div class="col-lg-6 col-md-6">
-              <img src="images/contact-img.svg" alt="">
+              <img class="contact-image" src="images/contact-img.svg" alt="">
             </div>
           </div>
         </div>
