--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <button class="btn-student">For Students</button>
             </div>
             <div class="col-lg-5 col-md-12 col-sm-12 d-flex justify-content-center">
-                <img class="home-img"style="width:600px;" src="images/hero-motio.svg" alt="">
+              <video width="500px" height="400px" src="images/home.mp4"></video>
             </div>
         </div>
       </div>
@@ -112,6 +112,42 @@
         </div>
       </div>
     </div>
+    <div class="our-services-card-2">
+      <div class="row d-flex justify-content-center">
+        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+          <img class="service-img" src="images/javascript.svg" alt="">
+        </div>
+        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+          <img class="service-img" src="images/html.svg" alt="">
+        </div>
+        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+          <img class="service-img" src="images/css.svg" alt="">
+        </div>
+        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+          <img class="service-img" src="images/python.svg" alt="">
+        </div>
+        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+          <img class="service-img" src="images/dart.svg" alt="">
+        </div>
+        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+          <img class="service-img" src="images/react.svg" alt="">
+        </div>
+        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+          <img class="service-img" src="images/dejango.svg" alt="">
+        </div>
+        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+          <img class="service-img" src="images/wordpress.svg" alt="">
+        </div>
+        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+          <img class="service-img" src="images/flutter.svg" alt="">
+        </div>
+        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+          <img class="service-img" src="images/node.png" alt="">
+        </div>
+  
+      </div>
+    </div>
+    
   </div>
 </section>
 
