--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
             <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <img class="navbar-brand" style="width: 9.8rem; height:5rem" src="images/Ryze-logo.svg" alt="">
+              <img class="navbar-brand wow animated fadeInDown" src="images/Ryze-logo.svg" alt="">
             
               <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0 nav-fill w-100">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">Our Process<span class="sr-only"></span></a>
+                    <a class="nav-link wow animated fadeInDown" href="#">Our Process<span class="sr-only"></span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Startups</a>
+                    <a class="nav-link wow animated fadeInDown" href="#">Startups</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Students</a>
+                    <a class="nav-link wow animated fadeInDown" href="#">Students</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item wow animated fadeInDown">
                     <button class="nav-btn">Get a Call</button>
                   </li>
                 </ul>
@@ -70,13 +70,13 @@
       </nav>
       <div class="container" style="margin-top: 10%;">
         <div class="row">
-            <div class="col-lg-7 col-md-12 col-sm-12">
+            <div class="col-lg-7 col-md-12 col-sm-12 wow animated bounceInRight">
                 <h1 class="home-heading" style="line-height: 1.5;" title="Front-End Developer /App Developer/ Back-End Developer">Hire Skilled Student<br>Front-End Developer /App...</h1> 
                 <p class="home-content">Managed Platform for High-Quality Development Projects for Startups.</p>
                 <button class="btn-startup">For Startups</button>
                 <button class="btn-student">For Students</button>
             </div>
-            <div class="col-lg-5 col-md-12 col-sm-12 d-flex justify-content-center">
+            <div class="col-lg-5 col-md-12 col-sm-12 d-flex justify-content-center wow animated bounceInLeft">
               <video width="500px" height="400px" src="images/home.mp4"></video>
             </div>
         </div>
@@ -87,7 +87,7 @@
   <div class="container">
     <h1 class="freelance-heading">Experience a Simplified Way to Freelance</h1>
     <p class="freelance-content">Tech Development Platform for Startups. Save on Time, Cost and Headache</p>
-    <div class="row freelance-row">
+    <div class="row freelance-row wow animated fadeInLeft">
       <div class="col-lg-5 col-md-5" style="padding-top:8%;">
         <div class="freelance-card d-flex justify-content-center">
           <p class="freelance-card-content">We understand your project needs and till when you need the project</p>
@@ -97,7 +97,7 @@
         <img class="freelance-card-image-1" src="images/freelance-1.svg" alt="">
       </div>
     </div>
-    <div class="row freelance-row">
+    <div class="row freelance-row wow animated fadeInRight">
       <div class="col-lg-7 col-md-7 d-flex justify-content-center">
         <img class="freelance-card-image-2" src="images/freelance-2.svg" alt="">
       </div>
@@ -107,7 +107,7 @@
         </div>
       </div>
     </div>
-    <div class="row freelance-row">
+    <div class="row freelance-row wow animated fadeInLeft">
       <div class="col-lg-5 col-md-5" style="padding-top:10%;">
         <div class="freelance-card d-flex justify-content-center">
           <p class="freelance-card-content">Execution is monitored by us while ensuring delivery and quality </p>
@@ -124,7 +124,7 @@
         <div class="our-services-card" style="margin: .5rem;">
           <img src="images/quarter-circle-blue.png" alt="" style="float: right;">
           <p class="our-services-card-heading">Web Development</p>
-          <div class="our-services-sub-card">
+          <div class="our-services-sub-card wow animated pulse">
             <p class="our-service-card-text">Front-End Developement</p>
             <p class="our-service-card-text">Back-End Developement</p>
             <p class="our-service-card-text">Database Management</p>
@@ -136,7 +136,7 @@
         <div class="our-services-card" style="margin: .5rem;">
           <img src="images/quarter-circle-green.png" alt="" style="float: right;">
           <p class="our-services-card-heading">App Development</p>
-          <div class="our-services-sub-card">
+          <div class="our-services-sub-card wow animated pulse">
           <p class="our-service-card-text">Flutter App Development</p>
           <p class="our-service-card-text">React Native App Development</p>
           <p class="our-service-card-text">Android Development</p>
@@ -148,34 +148,34 @@
     <div class="our-services-card-2">
       <div class="row d-flex justify-content-center">
         <div class="col-lg-2 col-md-2 d-flex justify-content-center">
-          <img class="service-img" src="images/javascript.svg" alt="">
+          <img class="service-img wow animated fadeInLeft" src="images/javascript.svg" alt="">
         </div>
         <div class="col-lg-2 col-md-2 d-flex justify-content-center">
-          <img class="service-img" src="images/html.svg" alt="">
+          <img class="service-img wow animated fadeInRight" src="images/html.svg" alt="">
         </div>
         <div class="col-lg-2 col-md-2 d-flex justify-content-center">
-          <img class="service-img" src="images/css.svg" alt="">
+          <img class="service-img wow animated fadeInLeft" src="images/css.svg" alt="">
         </div>
         <div class="col-lg-2 col-md-2 d-flex justify-content-center">
-          <img class="service-img" src="images/python.svg" alt="">
+          <img class="service-img wow animated fadeInRight" src="images/python.svg" alt="">
         </div>
         <div class="col-lg-2 col-md-2 d-flex justify-content-center">
-          <img class="service-img" src="images/dart.svg" alt="">
+          <img class="service-img wow animated fadeInLeft" src="images/dart.svg" alt="">
         </div>
         <div class="col-lg-2 col-md-2 d-flex justify-content-center">
-          <img class="service-img" src="images/react.svg" alt="">
+          <img class="service-img wow animated fadeInRight" src="images/react.svg" alt="">
         </div>
         <div class="col-lg-2 col-md-2 d-flex justify-content-center">
-          <img class="service-img" src="images/dejango.svg" alt="">
+          <img class="service-img wow animated fadeInLeft" src="images/dejango.svg" alt="">
         </div>
         <div class="col-lg-2 col-md-2 d-flex justify-content-center">
-          <img class="service-img" src="images/wordpress.svg" alt="">
+          <img class="service-img wow animated fadeInRight" src="images/wordpress.svg" alt="">
         </div>
         <div class="col-lg-2 col-md-2 d-flex justify-content-center">
-          <img class="service-img" src="images/flutter.svg" alt="">
+          <img class="service-img wow animated fadeInLeft" src="images/flutter.svg" alt="">
         </div>
         <div class="col-lg-2 col-md-2 d-flex justify-content-center">
-          <img class="service-img" src="images/node.png" alt="">
+          <img class="service-img wow animated fadeInRight" src="images/node.png" alt="">
         </div>
   
       </div>
@@ -189,7 +189,7 @@
       <h1 class="expect">What to expect when working with us?</h1>
       <p class="expect-message">We are customer-obsessed and strive to deliver cost and time efficient freelance experience</p>
     <div class="row no-gutters d-flex justify-content-center" style="margin-top: 4rem;">
-      <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+      <div class="col-lg-4 col-md-6 d-flex justify-content-center wow animated fadeInRight">
         <div class="expect-card">
           <div class="expect-card-logo d-flex justify-content-center">
             <img class="expect-card-image" src="images/managed-service.svg" alt="">
@@ -198,7 +198,7 @@
           <p class="expect-card-content">We manage all your projects end to end. So, you don’t have to worry about the completion of your project</p>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+      <div class="col-lg-4 col-md-6 d-flex justify-content-center wow animated tada">
         <div class="expect-card">
           <div class="expect-card-logo d-flex justify-content-center">
             <img class="expect-card-image" src="images/best-quality-work.svg" alt="">
@@ -207,7 +207,7 @@
           <p class="expect-card-content">Our verified network of student freelancer and our quality check provides best quality work everytime</p>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+      <div class="col-lg-4 col-md-6 d-flex justify-content-center wow animated fadeInLeft">
         <div class="expect-card">
           <div class="expect-card-logo d-flex justify-content-center">
             <img class="expect-card-image" src="images/cost-efficient.svg" alt="">
@@ -284,7 +284,7 @@
           <h1 class="contact-heading">Looking for Freelancer?</h1>
           <p class="contact-content">We want to change how freelancing is percieved. Be a part of this journey.</p>
           <div class="row no-gutters">
-            <div class="col-lg-6 col-md-6">
+            <div class="col-lg-6 col-md-6 wow animated zoomIn">
               <form action="index.html" style="margin-top: 60px">
                 <input class="input-box" type="text" name="Name" placeholder="Full Name"><br>
                 <input class="input-box" type="text" name="Company" placeholder="Company Name"><br>
@@ -294,7 +294,7 @@
               </form>
             </div>
             <div class="col-lg-6 col-md-6">
-              <img class="contact-image" src="images/contact-img.svg" alt="">
+              <img class="contact-image wow animated zoomIn" src="images/contact-img.svg" alt="">
             </div>
           </div>
         </div>
