--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="container" style="margin-top: 10%;">
         <div class="row">
             <div class="col-lg-7 col-md-12 col-sm-12 wow animated bounceInRight">
-              <h1 class="typewrite home-heading" data-period="2000" data-type='[ "Front-End Developer", "Backend Developer", "Web Developer", "App Developer" ]'>
+              <h1 class="typewrite home-heading" style="margin-bottom: 3rem;" data-period="2000" data-type='[ "Front-End Developer", "Backend Developer", "Web Developer", "App Developer" ]'>
                   <span class="wrap"></span>
               </h1>
                 <!-- <h1 class="home-heading" style="line-height: 1.5;">Front-End Developer, Backend Developer, Web Developer, App Developer</h1>  -->
