--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryze</title>
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="styles.css">
     <!-- favicon link -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <!-- poppins font -->
@@ -26,6 +24,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="styles.css">
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
@@ -74,7 +74,6 @@
               <h1 class="typewrite home-heading" style="margin-bottom: 3rem;" data-period="2000" data-type='[ "Front-End Developer", "Backend Developer", "Web Developer", "App Developer" ]'>
                   <span class="wrap"></span>
               </h1>
-                <!-- <h1 class="home-heading" style="line-height: 1.5;">Front-End Developer, Backend Developer, Web Developer, App Developer</h1>  -->
                 <p class="home-content">Managed Platform for High-Quality Development Projects for Startups.</p>
                 <button class="btn-startup">For Startups</button>
                 <button class="btn-student">For Students</button>
@@ -124,59 +123,59 @@
     <div class="row d-flex justify-content-center" style="margin-top: 4rem; margin-bottom: 4rem;">
       <div class="col-lg-6 col-md-6 d-flex justify-content-center">
         <div class="our-services-card" style="margin: .5rem;">
-          <img src="images/quarter-circle-blue.png" alt="" style="float: right;">
+          <img class="our-services-quarter-circle-image" src="images/quarter-circle-blue.png" alt="">
           <p class="our-services-card-heading">Web Development</p>
           <div class="our-services-sub-card wow animated pulse">
-            <p class="our-service-card-text">Front-End Developement</p>
-            <p class="our-service-card-text">Back-End Developement</p>
-            <p class="our-service-card-text">Database Management</p>
-            <p class="our-service-card-text">Wordpress Development</p>
+            <p class="our-service-card-text"><i class="fas fa-check"></i>Front-End Developement</p>
+            <p class="our-service-card-text"><i class="fas fa-check"></i>Back-End Developement</p>
+            <p class="our-service-card-text"><i class="fas fa-check"></i>Database Management</p>
+            <p class="our-service-card-text"><i class="fas fa-check"></i>Wordpress Development</p>
           </div>
         </div>
       </div>
       <div class="col-lg-6 col-md-6 d-flex justify-content-center">
         <div class="our-services-card" style="margin: .5rem;">
-          <img src="images/quarter-circle-green.png" alt="" style="float: right;">
+          <img class="our-services-quarter-circle-image" src="images/quarter-circle-green.png" alt="">
           <p class="our-services-card-heading">App Development</p>
           <div class="our-services-sub-card wow animated pulse">
-          <p class="our-service-card-text">Flutter App Development</p>
-          <p class="our-service-card-text">React Native App Development</p>
-          <p class="our-service-card-text">Android Development</p>
-          <p class="our-service-card-text">iOS Development</p>
+          <p class="our-service-card-text"><i class="fas fa-check"></i>Flutter App Development</p>
+          <p class="our-service-card-text"><i class="fas fa-check"></i>React Native App Development</p>
+          <p class="our-service-card-text"><i class="fas fa-check"></i>Android Development</p>
+          <p class="our-service-card-text"><i class="fas fa-check"></i>iOS Development</p>
           </div>
         </div>
       </div>
     </div>
     <div class="our-services-card-2">
-      <div class="row d-flex justify-content-center">
-        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+      <div class="row no-gutters d-flex justify-content-center">
+        <div class="col-lg-2 col-md-3">
           <img class="service-img wow animated fadeInLeft" src="images/javascript.svg" alt="">
         </div>
-        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+        <div class="col-lg-2 col-md-3">
           <img class="service-img wow animated fadeInRight" src="images/html.svg" alt="">
         </div>
-        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+        <div class="col-lg-2 col-md-3">
           <img class="service-img wow animated fadeInLeft" src="images/css.svg" alt="">
         </div>
-        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+        <div class="col-lg-2 col-md-3">
           <img class="service-img wow animated fadeInRight" src="images/python.svg" alt="">
         </div>
-        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+        <div class="col-lg-2 col-md-3">
           <img class="service-img wow animated fadeInLeft" src="images/dart.svg" alt="">
         </div>
-        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+        <div class="col-lg-2 col-md-3">
           <img class="service-img wow animated fadeInRight" src="images/react.svg" alt="">
         </div>
-        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+        <div class="col-lg-2 col-md-3">
           <img class="service-img wow animated fadeInLeft" src="images/dejango.svg" alt="">
         </div>
-        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+        <div class="col-lg-2 col-md-3">
           <img class="service-img wow animated fadeInRight" src="images/wordpress.svg" alt="">
         </div>
-        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+        <div class="col-lg-2 col-md-3">
           <img class="service-img wow animated fadeInLeft" src="images/flutter.svg" alt="">
         </div>
-        <div class="col-lg-2 col-md-2 d-flex justify-content-center">
+        <div class="col-lg-2 col-md-3">
           <img class="service-img wow animated fadeInRight" src="images/node.png" alt="">
         </div>
   
@@ -190,35 +189,33 @@
   <div style="text-align: center; background-color: #1E1515; padding-top: 4rem; padding-bottom: 6rem;">
       <h1 class="expect">What to expect when working with us?</h1>
       <p class="expect-message">We are customer-obsessed and strive to deliver cost and time efficient freelance experience</p>
-    <div class="row no-gutters d-flex justify-content-center" style="margin-top: 4rem;">
-      <div class="col-lg-4 col-md-6 d-flex justify-content-center wow animated fadeInRight">
+      <div class="d-flex justify-content-center">
         <div class="expect-card">
-          <div class="expect-card-logo d-flex justify-content-center">
-            <img class="expect-card-image" src="images/managed-service.svg" alt="">
+          <div class="d-flex justify-content-center">
+            <img class="expect-card-image" src="images/1.png" alt="">
           </div>
           <h1 class="expect-card-title">Managed Services</h1>
           <p class="expect-card-content">We manage all your projects end to end. So, you don’t have to worry about the completion of your project</p>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 d-flex justify-content-center wow animated tada">
+      <div class="d-flex justify-content-center">
         <div class="expect-card">
-          <div class="expect-card-logo d-flex justify-content-center">
-            <img class="expect-card-image" src="images/best-quality-work.svg" alt="">
+          <div class="d-flex justify-content-center">
+            <img class="expect-card-image" src="images/2.png" alt="">
           </div>
           <h1 class="expect-card-title">Best Quality Work</h1>
           <p class="expect-card-content">Our verified network of student freelancer and our quality check provides best quality work everytime</p>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 d-flex justify-content-center wow animated fadeInLeft">
+      <div class="d-flex justify-content-center">
         <div class="expect-card">
-          <div class="expect-card-logo d-flex justify-content-center">
-            <img class="expect-card-image" src="images/cost-efficient.svg" alt="">
+          <div class="d-flex justify-content-center">
+            <img class="expect-card-image" src="images/3.png" alt="">
           </div>
           <h1 class="expect-card-title">Cost Efficient</h1>
           <p class="expect-card-content">We ensure to deliever cost effiecient work to our clients leveraging the network of freelancers</p>
         </div>
       </div>
-    </div>
   </div>
 </section>
 
@@ -282,16 +279,16 @@
       </section>
 
       <section id="contact">
-        <div class="contact-container">
+        <div class="contact-container container">
           <h1 class="contact-heading">Looking for Freelancer?</h1>
           <p class="contact-content">We want to change how freelancing is percieved. Be a part of this journey.</p>
-          <div class="row no-gutters">
+          <div class="row no-gutters container">
             <div class="col-lg-6 col-md-6 wow animated zoomIn">
               <form action="index.html" style="margin-top: 60px">
-                <input class="input-box" type="text" name="Name" placeholder="Full Name"><br>
-                <input class="input-box" type="text" name="Company" placeholder="Company Name"><br>
-                <input class="input-box" type="email" name="Email" placeholder="Email Address"><br>
-                <input class="input-box" type="number" name="Mobile" placeholder="Mobile Nmber"><br>
+                <input class="input-box form-control" type="text" name="Name" placeholder="Full Name"><br>
+                <input class="input-box form-control" type="text" name="Company" placeholder="Company Name"><br>
+                <input class="input-box form-control" type="email" name="Email" placeholder="Email Address"><br>
+                <input class="input-box form-control" type="number" name="Mobile" placeholder="Mobile Nmber"><br>
                 <button type="submit" class="contact-btn">Submit</button>
               </form>
             </div>
