--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
       <div class="container" style="margin-top: 10%;">
         <div class="row">
             <div class="col-lg-7 col-md-12 col-sm-12 wow animated bounceInRight">
-              <h1 class="typewrite home-heading" style="margin-bottom: 3rem;" data-period="2000" data-type='[ "Front-End Developer", "Backend Developer", "Web Developer", "App Developer" ]'>
+              <div id="container">
+                <div class="home-heading" id="text"></div>
+              </div>
+              <!-- <h1 class="typewrite home-heading" style="margin-bottom: 3rem;" data-period="2000" data-type='[ "Front-End Developer", "Backend Developer", "Web Developer", "App Developer" ]'>
                   <span class="wrap"></span>
-              </h1>
+              </h1> -->
                 <p class="home-content">Managed Platform for High-Quality Development Projects for Startups.</p>
                 <button class="btn-startup">For Startups</button>
                 <button class="btn-student">For Students</button>
