--- a/index.html
+++ b/index.html
@@ -152,35 +152,35 @@
     </div>
     <div class="our-services-card-2">
       <div class="row no-gutters d-flex justify-content-center">
-        <div class="col-lg-2 col-md-3">
-          <img class="service-img wow animated fadeInLeft" src="images/javascript.svg" alt="">
+        <div class="col-lg-2 col-md-3 col-sm-4 col-4">
+          <div class="service-img-1 wow animated fadeInLeft"></div>
         </div>
-        <div class="col-lg-2 col-md-3">
-          <img class="service-img wow animated fadeInRight" src="images/html.svg" alt="">
+        <div class="col-lg-2 col-md-3 col-sm-4 col-4">
+          <div class="service-img-2 wow animated fadeInRight"></div>
         </div>
-        <div class="col-lg-2 col-md-3">
-          <img class="service-img wow animated fadeInLeft" src="images/css.svg" alt="">
+        <div class="col-lg-2 col-md-3 col-sm-4 col-4">
+          <div class="service-img-3 wow animated fadeInLeft"></div>
         </div>
-        <div class="col-lg-2 col-md-3">
-          <img class="service-img wow animated fadeInRight" src="images/python.svg" alt="">
+        <div class="col-lg-2 col-md-3 col-sm-4 col-4">
+          <div class="service-img-4 wow animated fadeInRight"></div>
         </div>
-        <div class="col-lg-2 col-md-3">
-          <img class="service-img wow animated fadeInLeft" src="images/dart.svg" alt="">
+        <div class="col-lg-2 col-md-3 col-sm-4 col-4">
+          <div class="service-img-5 wow animated fadeInLeft"></div>
         </div>
-        <div class="col-lg-2 col-md-3">
-          <img class="service-img wow animated fadeInRight" src="images/react.svg" alt="">
+        <div class="col-lg-2 col-md-3 col-sm-4 col-4">
+          <div class="service-img-6 wow animated fadeInRight"></div>
         </div>
-        <div class="col-lg-2 col-md-3">
-          <img class="service-img wow animated fadeInLeft" src="images/dejango.svg" alt="">
+        <div class="col-lg-2 col-md-3 col-sm-4 col-4">
+          <div class="service-img-7 wow animated fadeInLeft"></div>
         </div>
-        <div class="col-lg-2 col-md-3">
-          <img class="service-img wow animated fadeInRight" src="images/wordpress.svg" alt="">
+        <div class="col-lg-2 col-md-3 col-sm-4 col-4">
+          <div class="service-img-8 wow animated fadeInRight"></div>
         </div>
-        <div class="col-lg-2 col-md-3">
-          <img class="service-img wow animated fadeInLeft" src="images/flutter.svg" alt="">
+        <div class="col-lg-2 col-md-3 col-sm-4 col-4">
+          <div class="service-img-9 wow animated fadeInLeft"></div>
         </div>
-        <div class="col-lg-2 col-md-3">
-          <img class="service-img wow animated fadeInRight" src="images/node.png" alt="">
+        <div class="col-lg-2 col-md-3 col-sm-4 col-4">
+          <div class="service-img-10 wow animated fadeInRight"></div>
         </div>
   
       </div>
@@ -193,33 +193,36 @@
   <div style="text-align: center; background-color: #1E1515; padding-top: 4rem; padding-bottom: 6rem;">
       <h1 class="expect">What to expect when working with us?</h1>
       <p class="expect-message">We are customer-obsessed and strive to deliver cost and time efficient freelance experience</p>
-      <div class="d-flex justify-content-center">
-        <div class="expect-card">
-          <div class="d-flex justify-content-center">
-            <img class="expect-card-image" src="images/1.png" alt="">
+      <div style="background-image:url('images/jefferson-santos-9SoCnyQmkzI-unsplash\ 1.png')">
+        <div class="d-flex justify-content-center">
+          <div class="expect-card">
+            <div class="d-flex justify-content-center">
+              <img class="expect-card-image" src="images/1.png" alt="">
+            </div>
+            <h1 class="expect-card-title">Managed Services</h1>
+            <p class="expect-card-content">We manage all your projects end to end. So, you don’t have to worry about the completion of your project</p>
           </div>
-          <h1 class="expect-card-title">Managed Services</h1>
-          <p class="expect-card-content">We manage all your projects end to end. So, you don’t have to worry about the completion of your project</p>
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="expect-card">
+            <div class="d-flex justify-content-center">
+              <img class="expect-card-image" src="images/2.png" alt="">
+            </div>
+            <h1 class="expect-card-title">Best Quality Work</h1>
+            <p class="expect-card-content">Our verified network of student freelancer and our quality check provides best quality work everytime</p>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="expect-card">
+            <div class="d-flex justify-content-center">
+              <img class="expect-card-image" src="images/3.png" alt="">
+            </div>
+            <h1 class="expect-card-title">Cost Efficient</h1>
+            <p class="expect-card-content">We ensure to deliever cost effiecient work to our clients leveraging the network of freelancers</p>
+          </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center">
-        <div class="expect-card">
-          <div class="d-flex justify-content-center">
-            <img class="expect-card-image" src="images/2.png" alt="">
-          </div>
-          <h1 class="expect-card-title">Best Quality Work</h1>
-          <p class="expect-card-content">Our verified network of student freelancer and our quality check provides best quality work everytime</p>
-        </div>
-      </div>
-      <div class="d-flex justify-content-center">
-        <div class="expect-card">
-          <div class="d-flex justify-content-center">
-            <img class="expect-card-image" src="images/3.png" alt="">
-          </div>
-          <h1 class="expect-card-title">Cost Efficient</h1>
-          <p class="expect-card-content">We ensure to deliever cost effiecient work to our clients leveraging the network of freelancers</p>
-        </div>
-      </div>
+      
   </div>
 </section>
 
