--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
         <ul id="testim-dots" class="dots">
             <li class="dot active"></li>
             <li class="dot"></li>
+            <!-- <li class="dot"></li>
             <li class="dot"></li>
-            <li class="dot"></li>
-            <li class="dot"></li>
+            <li class="dot"></li> -->
         </ul>
         <div id="testim-content" class="cont">
             
@@ -264,7 +264,7 @@
                 </div>                  
             </div>
   
-            <div>
+            <!-- <div>
                 <p><i class="fas fa-quote-left mr-4"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
                 <div class="img"><img src="https://image.ibb.co/iN3qES/pexels_photo_324658.jpg" alt="">
                   <div>
@@ -292,7 +292,7 @@
                     <p>consectetur adipiscing elit, sed do eiusmod</p>
                   </div>
                 </div>                    
-            </div>
+            </div> -->
   
         </div>
   
