--- a/index.html
+++ b/index.html
@@ -43,37 +43,32 @@
 
 <body>
   <section id="home">
-    <nav class="navbar navbar-expand-lg navbar-static-top" style="background-color: #fff;">
+    <nav class="navbar navbar-expand-lg navbar-fixed-top" style="background-color: #fff;width: 100%;">
         <div class="container">
           <img class="navbar-brand wow animated fadeInDown" src="images/Ryze-logo.svg" alt="">
-          <div class="nav-item wow animated fadeInDown" style="padding-left: 10rem;">
-            <button class="nav-btn">Get a Call</button>
+          <div class="" id="navbar">
+            <ul class="navbar-nav ml-auto mt-2 mt-lg-0 nav-fill w-100">
+              <li class="nav-item active">
+                <a class="nav-link hidden wow animated fadeInDown" href="#">Our Process<span class="sr-only"></span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link hidden wow animated fadeInDown" href="#">Startups</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link hidden wow animated fadeInDown" href="#">Students</a>
+              </li>
+              <li class="nav-item wow animated fadeInDown">
+                <button class="nav-link nav-btn">Get a Call</button>
+              </li>
+            </ul>
           </div>
-            <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              
-              
-              <div class="collapse navbar-collapse" id="navbar">
-                <ul class="navbar-nav ml-auto mt-2 mt-lg-0 nav-fill w-100">
-                  <li class="nav-item active">
-                    <a class="nav-link wow animated fadeInDown" href="#">Our Process<span class="sr-only"></span></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link wow animated fadeInDown" href="#">Startups</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link wow animated fadeInDown" href="#">Students</a>
-                  </li>
-                </ul>
-              </div>
         </div>
-      </nav>
+    </nav>
       <div class="container" style="margin-top: 10%;">
         <div class="row">
             <div class="col-lg-7 col-md-12 col-sm-12 wow animated bounceInRight">
               <div id="container">
-                <div class="home-heading">Hire skilled Student</div>
+                <div class="mob-view-margin home-heading">Hire skilled Student</div>
                 <div class="home-heading" id="text"></div>
               </div>
                 <p class="home-content">Managed Platform for High-Quality Development Projects for Startups.</p>
@@ -81,7 +76,7 @@
                 <button class="btn-student">For Students</button>
             </div>
            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player src="https://assets6.lottiefiles.com/private_files/lf30_WdTEui.json"  background="transparent"  speed="1"  style="width: 400px; height: 400px;"  loop autoplay></lottie-player>
+<lottie-player class="lottie-player-image" src="https://assets6.lottiefiles.com/private_files/lf30_WdTEui.json"  background="transparent"  speed="1"    loop autoplay></lottie-player>
         </div>
       </div>
 </section>
