--- a/index.html
+++ b/index.html
@@ -85,7 +85,28 @@
   <div class="container">
     <h1 class="freelance-heading">Experience a Simplified Way to Freelance</h1>
     <p class="freelance-content">Tech Development Platform for Startups. Save on Time, Cost and Headache</p>
-    <div class="row freelance-row wow animated fadeInLeft">
+
+    <div class="freelance-row wow animated fadeInLeft">
+      <img class="freelance-card-image-1" src="images/freelance-1.svg" alt="">
+        <div class="freelance-card d-flex justify-content-center">
+          <p class="freelance-card-content">We understand your project needs and till when you need the project</p>
+        </div>
+    </div>
+    <div class="freelance-row wow animated fadeInRight">
+      <img class="freelance-card-image-2" src="images/freelance-2.svg" alt="">
+        <div class="freelance-card d-flex justify-content-center">
+          <p class="freelance-card-content">We understand your project needs and till when you need the project</p>
+        </div>
+    </div>
+    <div class="freelance-row wow animated fadeInLeft">
+      <img class="freelance-card-image-3" src="images/freelance-3.svg" alt="">
+        <div class="freelance-card-3 d-flex justify-content-center">
+          <p class="freelance-card-content">We understand your project needs and till when you need the project</p>
+        </div>
+    </div>
+
+
+    <!-- <div class="row freelance-row wow animated fadeInLeft">
       <div class="col-lg-5 col-md-5" style="padding-top:8%;">
         <div class="freelance-card d-flex justify-content-center">
           <p class="freelance-card-content">We understand your project needs and till when you need the project</p>
@@ -114,7 +135,7 @@
       <div class="col-lg-7 col-md-7 d-flex justify-content-center">
         <img class="freelance-card-image-3" src="images/freelance-3.svg" alt="">
       </div>
-    </div>
+    </div> -->
     <h1 class="our-services">Our Services</h1>
     <p class="our-services-content">Changing the Freelance Market, One Category at a Time</p>
     <div class="row d-flex justify-content-center" style="margin-top: 4rem; margin-bottom: 4rem;">
