resizing desktop view

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <h1 class="freelance-heading">Experience a Simplified Way to Freelance</h1>
     <p class="freelance-content">Tech Development Platform for Startups. Save on Time, Cost and Headache</p>
 
-    <div class="freelance-row wow animated fadeInLeft">
+    <div class="freelance-row wow animated fadeInLeft" style="margin-top: 3rem;">
       <img class="freelance-card-image-1" src="images/freelance-1.svg" alt="">
         <div class="freelance-card d-flex justify-content-center">
           <p class="freelance-card-content">We understand your project needs and till when you need the project</p>
